# users-twitter-clone-service

./: .env.dist  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
.docker/: Dockerfile
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-docker.yaml  deploy-staging.yaml  deploy-to-staging.yaml  main_users-twitter-clone-service.yml  rebase-develop.yaml  test.yaml
app/: main.py
app/api/: healthcheck.py
app/api/api_V1/endpoints/: items.py
app/config/: settings.py
app/db/crud/: crud_item.py
app/schemas/: item.py
app/services/: items_service.py
app/utils/: exceptions.py
tests/crud/: test_item.py
tests/utils/: item.py
